# swift-arg-parser

./: CHANGELOG.md  Package.swift  Package@swift-5.6.swift  README.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
Examples/count-lines/: CountLines.swift
Examples/math/: Math.swift
Examples/repeat/: Repeat.swift
Examples/roll/: main.swift
Plugins/GenerateManual/: GenerateManualPlugin.swift
Sources/ArgumentParser/: CMakeLists.txt
Sources/ArgumentParser/Documentation.docc/: ArgumentParser.md
Sources/ArgumentParser/Documentation.docc/Articles/: CustomizingCompletions.md  DeclaringArguments.md  ExperimentalFeatures.md  GettingStarted.md  InstallingCompletionScripts.md  Validation.md
Sources/ArgumentParser/Documentation.docc/Extensions/: Argument.md  ArgumentArrayParsingStrategy.md  AsyncParsableCommand.md  CommandConfiguration.md  Flag.md  Option.md  OptionGroup.md  ParsableArguments.md  ParsableCommand.md
Sources/ArgumentParser/Parsable Properties/: ArgumentVisibility.swift
Sources/ArgumentParser/Parsable Types/: ParsableArguments.swift  ParsableArgumentsValidation.swift  ParsableCommand.swift
Sources/ArgumentParser/Parsing/: ArgumentDefinition.swift  ArgumentSet.swift
Sources/ArgumentParser/Usage/: DumpHelpGenerator.swift  HelpGenerator.swift
Sources/ArgumentParserTestHelpers/: CMakeLists.txt  TestHelpers.swift
Sources/ArgumentParserToolInfo/: CMakeLists.txt
Sources/AsyncTest/: AsyncTest.swift
Tests/ArgumentParserEndToEndTests/: CustomParsingEndToEndTests.swift  DefaultSubcommandEndToEndTests.swift  DefaultsEndToEndTests.swift  EnumEndToEndTests.swift  EqualsEndToEndTests.swift  FlagsEndToEndTests.swift  JoinedEndToEndTests.swift  LongNameWithShortDashEndToEndTests.swift  NestedCommandEndToEndTests.swift  OptionGroupEndToEndTests.swift  OptionalEndToEndTests.swift  PositionalEndToEndTests.swift  RawRepresentableEndToEndTests.swift  RepeatingEndToEndTests+ParsingStrategy.swift  RepeatingEndToEndTests.swift  ShortNameEndToEndTests.swift  SimpleEndToEndTests.swift  SingleValueParsingStrategyTests.swift  SourceCompatEndToEndTests.swift  SubcommandEndToEndTests.swift  TransformEndToEndTests.swift  UnparsedValuesEndToEndTest.swift  ValidationEndToEndTests.swift
Tests/ArgumentParserExampleTests/: CountLinesExampleTests.swift  MathExampleTests.swift  RepeatExampleTests.swift  RollDiceExampleTests.swift
Tests/ArgumentParserGenerateManualTests/: CountLinesGenerateManualTests.swift  MathGenerateManualTests.swift  RepeatGenerateManualTests.swift  RollDiceGenerateManualTests.swift
Tests/ArgumentParserPackageManagerTests/: HelpTests.swift  Tests.swift
Tests/ArgumentParserUnitTests/: CompletionScriptTests.swift  DumpHelpGenerationTests.swift  ErrorMessageTests.swift  ExitCodeTests.swift  HelpGenerationTests+AtArgument.swift  HelpGenerationTests+AtOption.swift  HelpGenerationTests+GroupName.swift  HelpGenerationTests.swift  InputOriginTests.swift  MirrorTests.swift  NameSpecificationTests.swift  ParsableArgumentsValidationTests.swift  SequenceExtensionTests.swift  SplitArgumentTests.swift  (+5 more)
(+11 files in other folders)
